# ableton-skill

./: CLAUDE.md  README.md  build_desktop_pack.sh  deploy_remote_script.sh  pyproject.toml
.claude/: settings.local.json
.claude/skills/ableton-mcp/: SKILL.md
.claude/skills/ableton-mcp-arrange/: SKILL.md
.claude/skills/ableton-mcp-compose/: SKILL.md
.claude/skills/ableton-mcp-mix/: SKILL.md
.claude/skills/ableton-mcp-sounds/: SKILL.md
.claude/skills/ableton-mcp-theory/: SKILL.md
.claude/skills/ableton-skill/: SKILL.md
.claude/skills/ableton-skill-arrange/: SKILL.md
.claude/skills/ableton-skill-compose/: SKILL.md
.claude/skills/ableton-skill-mix/: SKILL.md
.claude/skills/ableton-skill-sounds/: SKILL.md
.claude/skills/ableton-skill-theory/: SKILL.md
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: server.py
skill-pack/: INSTALL.md
